complete upto about

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>web Developer Portfolio</title>
@@ -8,45 +9,65 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="Styles/porfolio.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <header class="header">
-      <nav>
-        <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
-        <ul>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Blog</a></li>
-          <li><button class="btn-primary">Hire Me</button></li>
-        </ul>
-      </nav>
-      <div class="banner">
-        <div class="banner-content">
-          <h3 class="banner-greeting">Hi, I am</h3>
-          <h1 class="banner-title">Nahid Raz</h1>
-          <p class="banner-description">
-            Shot what able cold new see hold.Friendly as an betrayed formerly
-            he. Morning because as to society behaved moments.
-          </p>
-          <button class="btn-primary">Download CV</button>
-          <button class="btn-primary contact-btn">Contact</button>
+        <nav>
+            <h3 class="nav-title">Na<span class="text-primary">h</span>id</h3>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button class="btn-primary">Hire Me</button></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greeting">Hi, I am</h3>
+                <h1 class="banner-title">Nahid Raz</h1>
+                <p class="banner-description">
+                    Shot what able cold new see hold.Friendly as an betrayed formerly
+                    he. Morning because as to society behaved moments.
+                </p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary contact-btn">Contact</button>
+            </div>
+            <img class="profile-pic" src="images/nahidraz.png" alt="" />
         </div>
-        <img class="profile-pic" src="images/nahidraz.png" alt="" />
-      </div>
     </header>
 
     <main>
         <section class="about">
             <h3 class="section-title">About Me</h3>
-            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata.</p>
+
+            <table class="user-info">
+                <tbody>
+                    <tr>
+                        <th>Name:</th>
+                        <th>Email:</th>
+                        <th>Date of Birth:</th>
+                        <th>From:</th>
+                    </tr>
+                    <tr>
+                        <td>Nahid Raz</td>
+                        <td>contact.nzamanraz@gmail.com</td>
+                        <td>23 November 1999</td>
+                        <td>Dhaka, Bangladesh</td>
+                    </tr>
+
+                    </tr>
+                </tbody>
+            </table>
         </section>
     </main>
 
     <footer></footer>
-  </body>
+</body>
+
 </html>
