--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
                     </div>
                 </div>
             </section>
+            <div class="download-cv">
+                <button class="btn-primary">Download CV</button>
+            </div>
     </main>
 
     <footer></footer>
