font awesome icon added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="Styles/porfolio.css" />
+    <script src="https://kit.fontawesome.com/93d4bcfdcc.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -31,8 +32,8 @@
                     Shot what able cold new see hold.Friendly as an betrayed formerly
                     he. Morning because as to society behaved moments.
                 </p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary contact-btn">Contact</button>
+                <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary contact-btn"> <i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="profile-pic" src="images/nahidraz.png" alt="" />
         </div>
@@ -150,7 +151,7 @@
                 </div>
             </section>
             <div class="download-cv">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
     </main>
 
